2005-12-31 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c (decorateType): fix promotion of unary minus
	* src/SDCCsymt.c (computeType): beautified
	* src/SDCCval.c (cheapestVal): beautified, old non-Ansi version removed,
	(valUnaryPM, valComplement): fix sign and promotion,
	(valNot): ANSI: result type is int (SDCC: unsigned char)
	* support/regression/tests/uminus.c: speedup by removing superflous
	test case 'int'
	* support/regression/tests/onebyte.c: added promotion and signedness
	tests for unary minus
	* support/regressions/tests/bug-477927.c: disable warning about
	uninitialized variables
	* support/regression/tests/not.c: added

2005-12-28 Bernhard Held <bernhard AT bernhardheld.de>

	* device/lib/Makefile.in: added --std-sdcc99 to CFLAGS
	* src/mcs51/gen.c (gen51Code): show final register usage after
	fillGaps in asm with --i-code-in-asm
	* src/SDCClrange.c (sequenceiCode, setLiveFrom, setLiveTo,
	markLiveRanges, markAlive, findNextUseSym, findNextUse, unvisitBlocks,
	incUsed, rliveClear, adjustIChain): made static,
	(setFromRange): excluded because it's unused,
	(findPrevUseSym, markWholeLoop): added,
	(findPrevUse): rewritten; fixes bug 895992; now a complete search
	through	all branches of predecessors enables sdcc to emit the warning
	W_LOCAL_NOINIT, marking of outermost loop was incomplete,
	(rlivePoint): made static, added parameter emitWarnings which is only
	true during the first run out of two,
	(findRecursiveSucc, findRecursivePred): removed,
	(computeLiveRanges): made static, added parameter emitWarnings,
	(dumpIcRlive): added for debugging only
	* src/SDCClrange.h: added boolean parameter to computeLiveRanges(),
	removed prototype of setFromRange()
	* src/SDCCopt.c (eBBlockFromiCode): added new parameter emitWarnings
	in call of computeLiveRanges()
	* support/regression/tests/bug-895992.c: added
	* support/regression/tests/bug-971834.c: added
	* support/valdiag/tests/bug-895992.c: added
	* support/valdiag/tests/bug-971834.c: added