@@ -1,3 +1,9 @@
+2006-01-16 Bernhard Held <bernhard AT bernhardheld.de>
+
+	* src/SDCCicode.c (geniCodeIfx): fix bug 1406131: always false
+	while loop
+	* support/regression/tests/bug-1406131.c: added
+
 2005-12-31 Bernhard Held <bernhard AT bernhardheld.de>
 
 	* src/SDCCast.c (decorateType): fix promotion of unary minus
